# Coq-HoTT

./: .dir-locals.el  .gitignore  .gitmodules  .mailmap  .travis.yml  CREDITS.txt  Contractible.v  INSTALL.md  INSTALL.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.coq.local  Makefile.coq.local-early  Makefile.in  Makefile_targets.mk  Paths.v  README  README.markdown  README.md  README.org  SCIENCE.md  STYLE.md  STYLE.txt  SeqColimits.v  TIMING.md  UNICODE.txt  _CoqProject  autogen.sh  build-HoTTClasses.sh  build-dependencies.sh  configure  configure.ac  coq-hott.opam  coq-hott.opam.template  coqopts.in  dune  dune-project  flake.nix  git.md  (+15 more)
theories/: .CoReflectiveSubuniverse.v.swp  .dir-locals.el  Basics.v  BooleanReflection.v  BoundedSearch.v  CPP2017.v  Categories.v  CoModality.v  CoReflectiveSubuniverse.v  Common.v  Conjugation.v  Connectedness.v  Constant.v  Contractible.v  CoqStandardLibraryReplacement.v  Cubical.v  DProp.v  EquivGroupoids.v  EquivalenceVarieties.v  Equivalences.v  ExcludedMiddle.v  ExtensionalityAxiom.v  Extensions.v  Factorization.v  FiberEquivalences.v  FiberSequences.v  Fibrations.v  FreeMonoidalCategory.v  Functorish.v  Funext.v  FunextAxiom.v  FunextEquivalences.v  FunextVarieties.v  HFiber.v  HLevel.v  HProp.v  HSet.v  HoTT.v  HoTTBook.v  Homotopy.v  (+37 more)
theories/Algebra/: AbGroups.v  AbSES.v  AbelianGroup.v  Aut.v  CRing.v  Congruence.v  Group.v  Groups.v  Ideal.v  QuotientGroup.v  Rings.v  Subgroup.v  Z.v  ooAction.v  ooGroup.v
theories/Analysis/: Locator.v
theories/Axioms/: Funext.v  PropResizing.v  Univalence.v
theories/Basics/: Classes.v  Contractible.v  Datatypes.v  Decidable.v  Decimal.v  Equivalences.v  Fibrations.v  FunextVarieties.v  Hexadecimal.v  Iff.v  Logic.v  Nat.v  Notations.v  Numeral.v  Overture.v  PathGroupoids.v  Pointed.v  Predicate.v  SProp.v  Settings.v  Tactics.v  Trunc.v  UniverseLevel.v  Utf8.v  WildCat.v
theories/Categories/: Adjoint.v  Cat.v  Category.v  CategoryOfGroupoids.v  CategoryOfSections.v  ChainCategory.v  Comma.v  DependentProduct.v  DiscreteCategory.v  DualFunctor.v  ExponentialLaws.v  Functor.v  FunctorCategory.v  FundamentalGroupoid.v  FundamentalPreGroupoidCategory.v  Grothendieck.v  GroupoidCategory.v  HomFunctor.v  HomotopyCategory.v  HomotopyPreCategory.v  IndiscreteCategory.v  InitialTerminalCategory.v  KanExtensions.v  LaxComma.v  Limits.v  MonoidalCategory.v  NatCategory.v  NaturalTransformation.v  Notations.v  ProductLaws.v  Profunctor.v  Pseudofunctor.v  PseudonaturalTransformation.v  SemiSimplicialSets.v  SetCategory.v  SimplicialSets.v  Structure.v  UniversalProperties.v  Utf8.v  Yoneda.v
theories/Colimits/: Coeq.v  CoeqUnivProp.v  Colimit.v  Colimit_Coequalizer.v  Colimit_Flattening.v  Colimit_Prod.v  Colimit_Pushout.v  Colimit_Pushout_Flattening.v  Colimit_Sigma.v  GraphQuotient.v  MappingCylinder.v  Pushout.v  PushoutFlattening.v  Quotient.v  SeqColimits.v  Sequential.v  SpanPushout.v
theories/Comodalities/: CoreflectiveSubuniverse.v
theories/Cubical/: Cube.v  DCube.v  DPath.v  DPathCube.v  DPathSquare.v  DSquare.v  PathCube.v  PathSquare.v  Square.v
theories/Diagrams/: #Grothendieck.v#  Cocone.v  CoeqDiagram.v  CommutativeSquares.v  Cone.v  ConstantDiagram.v  DDiagram.v  Diagram.v  Graph.v  MappingTelescope.v  ParallelPair.v  Sequence.v  Span.v
theories/Equiv/: BiInv.v  PathSplit.v  Relational.v
theories/Experimental/: Colimit.v
theories/HIT/: Circle.v  Coeq.v  Colimits.v  Connectedness.v  Flattening.v  FreeIntQuotient.v  ImpredicativeInterval.v  Interval.v  IntervalImpliesFunext.v  Join.v  Pushout.v  README.txt  SetCone.v  SpanPushout.v  Spheres.v  Suspension.v  TruncImpliesFunext.v  Truncations.v  V.v  epi.v  iso.v  quotient.v  surjective_factor.v  unique_choice.v
theories/Homotopy/: BlakersMassey.v  Bouquet.v  CayleyDickson.v  ClassifyingSpace.v  Cofiber.v  Cohomology.v  Cover.v  EMSpace.v  EncodeDecode.v  EvaluationFibration.v  ExactSequence.v  Freudenthal.v  HSpace.v  HSpaceS1.v  HomotopyGroup.v  Hopf.v  IdentitySystems.v  Join.v  JoinConstruction.v  Pi1S1.v  PinSn.v  Smash.v  SuccessorStructure.v  Suspension.v  Syllepsis.v  Syllepsis_2.v  TodaBracket.v  TorusEquivCircles.v  Wedge.v  WhiteheadsPrinciple.v
theories/IR/: cauchy_completion.v  cauchy_dedekind.v  cauchy_reals.v  cauchy_semidec.v  dedekind.v  partiality.v  sierpinsky.v
theories/InjectiveTypes/: InjectiveSigma.v  InjectiveTypes.v  TypeFamKanExt.v
theories/Limits/: Equalizer.v  Limit.v  Pullback.v
theories/Logic/: Generic.v  LEM.v  Notations.v
theories/Metatheory/: Core.v  FunextVarieties.v  ImpredicativeTruncation.v  IntervalImpliesFunext.v  Nat.v  PropTrunc.v  TruncImpliesFunext.v  UnivalenceImpliesFunext.v  UnivalenceVarieties.v
theories/Misc/: BarInduction.v  BoundedSearch.v  CompactTypes.v  FanTheorem.v  UStructures.v
theories/Modalities/: Accessible.v  Closed.v  CoreflectiveSubuniverse.v  Descent.v  Fracture.v  Identity.v  Lex.v  Localization.v  Meet.v  Modality.v  Notnot.v  Nullification.v  Open.v  ReflectiveSubuniverse.v  Separated.v  Topological.v
theories/Pointed/: Core.v  Loops.v  pEquiv.v  pFiber.v  pHomotopy.v  pMap.v  pModality.v  pSect.v  pSusp.v  pTrunc.v  pType.v
theories/PropResizing/: ImpredicativeTruncation.v  Nat.v  PropResizing.v  Truncations.v
theories/Sets/: AC.v  Cardinality.v  GCH.v  GCHtoAC.v  Hartogs.v  Ordinals.v  Powers.v  Sierpinski.v
theories/Spaces/: BAut.v  BinInt.v  Cantor.v  Card.v  Circle.v  Finite.v  FreeInt.v  HawaiianEarring.v  Int.v  List.v  Nat.v  No.v  Option.v  Pos.v  Projective.v  Spheres.v  Torus.v  TwoSphere.v  Universe.v
theories/Spectra/: Coinductive.v  Spectrum.v
theories/Tactics/: BinderApply.v  EquivalenceInduction.v  EvalIn.v  Ltac2.v  Nameless.v  RewriteModuloAssociativity.v
theories/Truncations/: Connectedness.v  Constant.v  Core.v  SeparatedTrunc.v
theories/Types/: Arrow.v  Bool.v  Empty.v  Equiv.v  Forall.v  IWType.v  Nat.v  Option.v  Paths.v  Prod.v  Record.v  Sigma.v  Sum.v  Unit.v  Universe.v  WType.v  Wtype.v
theories/Universes/: Automorphisms.v  BAut.v  DProp.v  HProp.v  HSet.v  ObjectClassifier.v  Rigid.v  Smallness.v  (+3 more)
(+4448 files in other folders)
